# ModelServe

./: README.md  main.py  pyproject.toml  requirements.txt
embedding/: config.py  embedding_service.py  main.py  model_manager.py
memory/: main.py  memory.md  requirement.txt
memory/api/: dependencies.py  middleware.py  models.py
memory/api/endpoints/: business_chat.py  episodic.py  general.py  health.py  semantic.py  transient.py
memory/config/: .env.example  settings.py
memory/core/: abstractions.py  embedding_service.py  episodic.py  manager.py  preference_extractor.py  semantic.py  semantic_ds.py  transient.py
memory/storage/: base.py  dashvector_storage.py  json_storage.py  leveldb_storage.py  redis_storage.py
memory/utils/: exceptions.py  logger.py  validators.py
paper_models/DeepSeek_Engram/: Engram.md  engram_demo_v1.py
paper_models/MiMo-v2-flash/: mimo.py  mimo_v2_flash.ipynb
paper_models/Qwen3.5/: qwen3.5_model.py
paper_models/SAPO/: sapo.ipynb  sapo_llm.py
paper_models/Titans/: sliding_window_gpt2.py  titans.ipynb  titans_ablation.py  titans_memory.py  titans_wikitext_pure.py  titans_with_real_data.ipynb
paper_models/deepseek_v3.2/: deepseek_v3.2.ipynb  deepseek_v3.2.md  deepseek_v3.2_core.py  dsa_mla.py
